# bbl

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  api.md  bbl-bench.md  bbl-pain.md  bbl.cpp  bbl.h  bbl.md  benchmarks.md  bytecode.md  caco-bytecode-spec.md  chunk.h  code-review.md  compiler.cpp  compiler.h  concurrency.md  disasm.cpp  implementation.md  jit.cpp  jit.h  main.cpp  master-plan.md  model-list.txt  performance.md  plan.md  readme.bbl  stdlib.md  style.md  test_capture_check.bbl  test_getglobal_move.bbl  test_jit_arith.bbl  test_layout  test_nanbox.bbl  test_obj_type.bbl  test_rbx.bbl  test_review.bbl  test_self_move.bbl  test_trace.bbl  (+2 more)
bblbench/: 1_file_gen.bbl  2_primes.bbl  3_sort.bbl  4_collatz.bbl  5_closure.bbl  run.sh
bblbench/expected/: 1_file_gen.file  1_file_gen.stdout  2_primes.stdout  3_sort.stdout  4_collatz.stdout  5_closure.stdout
doc/: backlog.md  bbl.md  copy-and-patch-jit.md  glossary.md  implementation-plan.md  memory-model.md  overkill-review.md  performance.md  spec.md  structs.md
doc/features/: backlog-batch.md  binary-data.md  bitwise.md  call-api.md  cfn-assign.md  cli.md  cpp-api.md  each.md  errors.md  function.md  gen-gc.md  hash-table.md  inline-caches.md  inline-float.md  integer-dot-syntax.md  lazy-order.md  lightweight-concurrency.md  list.md  map.md  method-resolution.md  nrepl.md  open-filesystem.md  os-stdlib.md  performance-improvements.md  performance-round-2.md  performance-round-3.md  register-alloc.md  register-vm.md  security.md  stdlib.md  step-limit.md  string-ops.md  string.md  table.md  tail-call-optimization.md  trace-inline-array.md  typeof.md  userdata.md  vector.md  zero-based-push.md
src/: bbl.cpp  bbl.h  chunk.h  compat.h  compiler.cpp  compiler.h  dap.cpp  dap.h  disasm.cpp  disasm.h  jit.cpp  jit.h  lsp.cpp  lsp.h  main.cpp  vm.cpp  vm.h
tests/: fuzz.cpp  fuzz_stdin.cpp  run_functional.sh  run_workers.sh  test_bbl.cpp  test_compiler_fuzz.sh  test_lsp.sh
tests/bench/: binary_trees.bbl  closure_capture.bbl  closure_capture.lua  function_calls.bbl  function_calls.lua  gc_pressure.bbl  gc_pressure.lua  json_parse.bbl  loop_arith.bbl  loop_arith.lua  method_dispatch.bbl  method_dispatch.lua  recursion.bbl  recursion.lua  run_all.sh  spectral_norm.bbl  string_build.bbl  string_intern.bbl  string_intern.lua  string_parse.bbl  table_heavy.bbl  table_heavy.lua
tests/bench/csharp/BblBench/: Program.cs
tests/bench/node/: binary_trees.js  closure_capture.js  function_calls.js  gc_pressure.js  json_parse.js  loop_arith.js  method_dispatch.js  recursion.js  spectral_norm.js  string_build.js  string_parse.js  table_heavy.js
tests/functional/: args.bbl  arithmetic.bbl  binary_compress.bbl  binary_data.bbl  binary_exec-file.bbl  binary_execfile.bbl  binary_typed.bbl  bitwise.bbl  do_block.bbl  each.bbl  exec_string.bbl  file_io.bbl  functions.bbl  if_loop.bbl  logic.bbl  math.bbl  recursion.bbl  strings.bbl  structs.bbl  tables.bbl  trace_side_exit_branch.bbl  trace_side_exit_redefine.bbl  trace_side_exit_type.bbl  trace_sink_escape_call.bbl  trace_sink_escape_global.bbl  trace_sink_nested.bbl  trace_sink_no_escape.bbl  trace_sink_side_exit.bbl  try_catch.bbl  vectors.bbl
tests/functional/workers/: worker_echo.bbl  worker_join.bbl  worker_roundtrip.bbl
tmp/: function_calls.lua  function_calls_2m.lua  loop_arith.lua  loop_arith_5m.lua  string_intern.lua  table_heavy.lua
